# mail_box_solana_contracts

./: .eslintrc.js  .gitignore  AI_DEVELOPMENT_GUIDE.md  AI_OPTIMIZATION_SUMMARY.md  ARCHITECTURE.md  Anchor.toml  BUILD_VERIFICATION.md  CLAUDE.md  Cargo.toml  DEPENDENCIES.md  DEPLOYED.json  DEPLOYMENT.md  DEVELOPMENT.md  FEATURE_PARITY_ANALYSIS.md  README.md  RELEASES.md  SECURITY_AUDIT_REPORT.md  TESTING.md  TEST_COVERAGE.md  TEST_RESULTS.md  TEST_SUMMARY.md  cspell.json  eslint.config.js  evm_contracts  package-lock.json  package.json  setup-dev.sh  tsconfig.json  tsconfig.test.json
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: index.ts  mail-service-client.ts  mailer-client.ts  types.ts
config/: deploy-config.ts  networks.json
examples/: indexer-usage.ts  query-events.ts
migrations/: deploy.ts
programs/mail_box_factory/: Cargo.toml
programs/mail_box_factory/src/: lib.rs
programs/mail_service/: Cargo.toml
programs/mail_service/src/: lib.rs
programs/mailer/: Cargo.toml
programs/mailer/src/: lib.rs
scripts/: deploy-coordinated.ts  deploy.ts  predict-addresses.ts  verify-deployments.ts
tests/: mail-box-factory.test.ts  mail-service-client.test.ts  mail-service.test.ts  mailer-client.test.ts  mailer.test.ts  test-validation.test.ts  types-utils.test.ts
types/: test-globals.d.ts
