[workspace]
resolver = "2"

members = [
    "programs/*"
]

[profile.release]
overflow-checks = true

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }