[package]
name = "mail_service"
version = "0.1.0"
description = "MailBox Solana - Domain registration and delegation management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mail_service"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl.workspace = true