[package]
name = "mailer"
version = "0.1.0"
description = "MailBox Solana - Messaging system with USDC fees and revenue sharing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mailer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true